--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -10,12 +10,21 @@
     tools:context=".MainActivity"
     tools:showIn="@layout/activity_main">
 
+
+    <ImageView
+        android:id="@+id/default_jersey"
+        android:layout_width="wrap_content"
+        android:layout_height="350dp"
+        android:layout_gravity="center"
+        android:background="@drawable/green_jersey"/>
+
     <TextView
         android:id="@+id/title_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Customise your Jersey"
         android:textSize="24sp" />
+
 
     <TextView
         android:id="@+id/name_text"
@@ -26,7 +35,7 @@
          />
 
     <TextView
-        android:id="@+id/quantity_text"
+        android:id="@+id/number_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Number"
