--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -10,14 +10,6 @@
     tools:context=".MainActivity"
     tools:showIn="@layout/activity_main">
 
-
-    <ImageView
-        android:id="@+id/default_jersey"
-        android:layout_width="wrap_content"
-        android:layout_height="350dp"
-        android:layout_gravity="center"
-        android:background="@drawable/green_jersey"/>
-
     <TextView
         android:id="@+id/title_text"
         android:layout_width="wrap_content"
@@ -25,21 +17,41 @@
         android:text="Customise your Jersey"
         android:textSize="24sp" />
 
+<RelativeLayout
+    android:id="@+id/pagelayout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+    <ImageView
+        android:id="@+id/default_jersey"
+        android:layout_width="wrap_content"
+        android:layout_height="350dp"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:background="@drawable/green_jersey"
+    />
 
     <TextView
         android:id="@+id/name_text"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Name"
-        android:textSize="48sp"
-         />
+        android:layout_height="340dp"
+        android:layout_alignLeft="@+id/default_jersey"
+        android:layout_alignRight="@+id/default_jersey"
 
+        android:text="Android"
+        android:textSize="35sp"
+        android:gravity="center"
+         />
     <TextView
         android:id="@+id/number_text"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Number"
-        android:textSize="24sp"
+        android:layout_height="match_parent"
+        android:layout_alignLeft="@+id/default_jersey"
+        android:layout_alignRight="@+id/default_jersey"
+        android:gravity="center"
+        android:text="17"
+        android:textSize="85sp"
         android:textStyle="bold"/>
 
+
+</RelativeLayout>
 </LinearLayout>
